화면 중간에 학번, 이름 추가

--- a/BaseApp/app/src/main/res/layout/activity_main.xml
+++ b/BaseApp/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
@@ -12,4 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/strBtn1"></Button>
-  </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="82dp"
+        android:gravity="center"
+        android:text="2020039062 김민주" />
+
+</LinearLayout>
